--- a/styles.css
+++ b/styles.css
@@ -147,20 +147,25 @@ button {
   cursor: pointer;
 }
 
-#histories {
+/* #histories {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+} */
+#histories {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(3, auto);
 }
 
 .card {
   width: 100%;
   height: 100%;
-  padding: 50px;
+  padding: 50px 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 30px;
+  /* padding: 20px 30px; */
   color: white;
   border-radius: 15px;
   background: rgb(255, 255, 255);
@@ -190,7 +195,11 @@ button {
     width: 100%;
   }
 
-  .card {
-    flex-direction: column;
+  #histories {
+    grid-template-columns: repeat(1, 1fr);
   }
+
+  /* .card {
+    flex-direction: column;
+  } */
 }
