--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,7 @@ button {
   height: 100%;
   padding: 50px 10px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   /* padding: 20px 30px; */
